--- a/index.html
+++ b/index.html
@@ -14,9 +14,9 @@
         <div class="bg-grey">
           <div class="container">
             <ul class="nav-left">
-              <li><a class="maintext-color" href="#"><i class="fas fa-globe-europe"></i></a></li>
-              <li><a class="maintext-color pr-1 br-1 select" href="#">English</a></li>
-              <li><a class="maintext-color pl-1" href="#">Contact Us</a></li>
+              <li><a class="M-color" href="#"><i class="fas fa-globe-europe"></i></a></li>
+              <li><a class="M-color pr-1 br-1 select" href="#">English</a></li>
+              <li><a class="M-color pl-1" href="#">Contact Us</a></li>
             </ul>
             <ul class="nav-right">
               <li><a href="#"><i class="fas fa-search"></i></a></li>
@@ -31,16 +31,26 @@
         <div class="container">
           <img src="./Assets/img/logo.svg" alt="Logo del sito Hubspot">
           <ul class="nav-right">
-            <li><a class="maintext-color select" href="#">Software</a></li>
-            <li><a class="maintext-color" href="#">Pricing</a></li>
-            <li><a class="maintext-color select" href="#">Resources</a></li>
-            <li><a class="maintext-color select" href="#">Partners</a></li>
-            <li><a class="maintext-color select" href="#">About</a></li>
+            <li><a class="M-color select" href="#">Software</a></li>
+            <li><a class="M-color" href="#">Pricing</a></li>
+            <li><a class="M-color select" href="#">Resources</a></li>
+            <li><a class="M-color select" href="#">Partners</a></li>
+            <li><a class="M-color select" href="#">About</a></li>
           </ul>
         </div>
       </nav>
       <section class="bg-jumbo">
         <div class="container">
+          <div class="jumbo-text">
+            <h1 class="M-color">There's a better way to grow.</h1>
+            <p class="M-color F-1 p-3">Marketing, sales, and service software that helps your business grow without compromise. Because "good for the business" should also mean "good for the costumer".</p>
+            <a class="btn p-2 btn-color-white btn-bg-orange" href="#">GetHubspotFree</a>
+            <p class="M-color F-2 p-3">Get started with FREE tools, and upgrades as you grow.</p>
+          </div>
+        </div>
+      </section>
+      <section>
+        <div class="line">
 
         </div>
       </section>
