Prima Section Main

--- a/index.html
+++ b/index.html
@@ -56,5 +56,41 @@
       </section>
 
     </header>
+    <main>
+      <section class="Introduction">
+        <div class="container">
+          <img src="./Assets/img/cube.webp" alt="Cubo colorato smontato">
+          <h2 class="">Powerful Alone. Better Together</h2>
+          <p>HubSpot offers a full stack of software for marketing, sales, and customer service, with a completely free CRM at its core. They're powerful alone - but even better when used together.</p>
+          <div class="row">
+            <div class="col-30">
+
+            </div>
+            <div class="col-70">
+
+            </div>
+
+          </div>
+        </div>
+        <div class="row">
+          <div class="col-33">
+
+          </div>
+          <div class="col-33">
+
+          </div>
+          <div class="col-33">
+
+          </div>
+
+        </div>
+      </section>
+      <section class="Support">
+
+      </section>
+      <section class="Sponsor">
+
+      </section>
+    </main>
   </body>
 </html>
