Prima Section Main Completa

--- a/index.html
+++ b/index.html
@@ -14,14 +14,14 @@
         <div class="bg-grey">
           <div class="container">
             <ul class="nav-left">
-              <li><a class="M-color" href="#"><i class="fas fa-globe-europe"></i></a></li>
-              <li><a class="M-color pr-1 br-1 select" href="#">English</a></li>
-              <li><a class="M-color pl-1" href="#">Contact Us</a></li>
+              <li><a class="" href="#"><i class="fas fa-globe-europe"></i></a></li>
+              <li><a class=" pr-1 br-1 select" href="#">English</a></li>
+              <li><a class=" pl-1" href="#">Contact Us</a></li>
             </ul>
             <ul class="nav-right">
               <li><a href="#"><i class="fas fa-search"></i></a></li>
-              <li><a class="btn mlr-1 p-1 btn-color-orange btn-bg-white" href="#">Log in</a></li>
-              <li><a class="btn p-1 btn-color-white btn-bg-orange" href="#">GetHubspotFree</a></li>
+              <li><a class="btn mlr-1 p-1 color-orange bg-white" href="#">Log in</a></li>
+              <li><a class="btn p-1 color-white bg-orange" href="#">GetHubspotFree</a></li>
             </ul>
           </div>
         </div>
@@ -29,23 +29,23 @@
       </nav>
       <nav class="not-fixed">
         <div class="container">
-          <img src="./Assets/img/logo.svg" alt="Logo del sito Hubspot">
+          <img id="logo" src="./Assets/img/logo.svg" alt="Logo del sito Hubspot">
           <ul class="nav-right">
-            <li><a class="M-color select" href="#">Software</a></li>
-            <li><a class="M-color" href="#">Pricing</a></li>
-            <li><a class="M-color select" href="#">Resources</a></li>
-            <li><a class="M-color select" href="#">Partners</a></li>
-            <li><a class="M-color select" href="#">About</a></li>
+            <li><a class=" select" href="#">Software</a></li>
+            <li><a class="" href="#">Pricing</a></li>
+            <li><a class=" select" href="#">Resources</a></li>
+            <li><a class=" select" href="#">Partners</a></li>
+            <li><a class=" select" href="#">About</a></li>
           </ul>
         </div>
       </nav>
       <section class="bg-jumbo">
         <div class="container">
           <div class="jumbo-text">
-            <h1 class="M-color">There's a better way to grow.</h1>
-            <p class="M-color F-1 p-3">Marketing, sales, and service software that helps your business grow without compromise. Because "good for the business" should also mean "good for the costumer".</p>
-            <a class="btn p-2 btn-color-white btn-bg-orange" href="#">GetHubspotFree</a>
-            <p class="M-color F-2 p-3">Get started with FREE tools, and upgrades as you grow.</p>
+            <h1 class="">There's a better way to grow.</h1>
+            <p class=" F-1 p-3">Marketing, sales, and service software that helps your business grow without compromise. Because "good for the business" should also mean "good for the costumer".</p>
+            <a class="btn p-2 color-white bg-orange" href="#">GetHubspotFree</a>
+            <p class=" F-2 p-3">Get started with FREE tools, and upgrades as you grow.</p>
           </div>
         </div>
       </section>
@@ -57,32 +57,79 @@
 
     </header>
     <main>
-      <section class="Introduction">
+      <section class="introduction">
         <div class="container">
-          <img src="./Assets/img/cube.webp" alt="Cubo colorato smontato">
+          <img class="cube m-0" src="./Assets/img/cube.webp" alt="Cubo colorato smontato">
           <h2 class="">Powerful Alone. Better Together</h2>
-          <p>HubSpot offers a full stack of software for marketing, sales, and customer service, with a completely free CRM at its core. They're powerful alone - but even better when used together.</p>
-          <div class="row">
+          <p class="">HubSpot offers a full stack of software for marketing, sales, and customer service, with a completely free CRM at its core. They're powerful alone - but even better when used together.</p>
+          <div class="row bg-white card">
             <div class="col-30">
-
+              <img class="book m-0" src="./Assets/img/book.svg" alt="Libro Aperto">
+              <div class="btn-learn">
+                <a class="btn p-2 color-white bg-orange" href="#">Learn More</a>
+              </div>
             </div>
             <div class="col-70">
+              <h3>Free HubSpot CRM</h3>
+              <p>Everything you need to organize, track, and build better relationship with leads and customers. Yes, it's 100% free. Forever.</p>
+              <h4 class="d-inline-block v-middle pr-2">popolar feature</h4>
+              <hr class="d-inline-block v-middle w-65">
+              <ul class="list-horizontal">
+                <li class="check">Contact Insight</li>
+                <li class="check">Deals</li>
+                <li class="check">Task</li>
+              </ul>
+            </div>
+          </div>
 
+          <div class="row">
+            <div class="card-box">
+              <div class="col-30 bg-white card">
+                <img class="pt-1 w-30 m-0" src="./Assets/img/buble.svg" alt="">
+                <h3>Marketing Hub</h3>
+                <p>Marketing software to help you grow traffic, convert more visitors, and run complete inbound marketing campaigns at scale.</p>
+                <hr class="w-80 m-0 brt-1">
+                <h4>popolar feature</h4>
+                <ul class="list-vertical">
+                  <li class="check">Lead Generation</li>
+                  <li class="check">Marketing Automation</li>
+                  <li class="check">Analytics</li>
+                </ul>
+                <a class="btn p-2 color-white bg-orange" href="#">Learn More</a>
+              </div>
+            </div>
+            <div class="card-box">
+              <div class="col-30 bg-white card ml-1">
+                <img class="pt-1 w-37 m-0" src="./Assets/img/office.svg" alt="">
+                <h3>Sales Hub</h3>
+                <p>Time-saving sales software that helps you get deeper insights into prospects, automate the tasks you hate, and close more deals faster.</p>
+                <hr class="w-80 m-0 brt-1">
+                <h4>popolar feature</h4>
+                <ul class="list-vertical">
+                  <li class="check">Email Tracking</li>
+                  <li class="check">Meeting Scheduling</li>
+                  <li class="check">Email Automation</li>
+                </ul>
+                <a class="btn p-2 color-white bg-orange" href="#">Learn More</a>
+              </div>
+            </div>
+            <div class="card-box">
+              <div class="col-30 bg-white card ml-1">
+                <img class="pt-1 w-27 m-0" src="./Assets/img/table.svg" alt="">
+                <h3>Service Hub</h3>
+                <p>Customer service software to help you connect with customers, exceed expectations, and turn them into promoters that grow your business.</p>
+                <hr class="w-80 m-0 brt-1">
+                <h4>popolar feature</h4>
+                <ul class="list-vertical">
+                  <li class="check">Tickets</li>
+                  <li class="check">Customer Feedback</li>
+                  <li class="check">Knowledge Base</li>
+                </ul>
+                <a class="btn p-2 color-white bg-orange" href="#">Learn More</a>
+              </div>
             </div>
 
           </div>
-        </div>
-        <div class="row">
-          <div class="col-33">
-
-          </div>
-          <div class="col-33">
-
-          </div>
-          <div class="col-33">
-
-          </div>
-
         </div>
       </section>
       <section class="Support">
