--- a/index.html
+++ b/index.html
@@ -43,9 +43,9 @@
         <div class="container">
           <div class="jumbo-text">
             <h1 class="">There's a better way to grow.</h1>
-            <p class=" F-1 p-3">Marketing, sales, and service software that helps your business grow without compromise. Because "good for the business" should also mean "good for the costumer".</p>
+            <p class=" f-1 p-3">Marketing, sales, and service software that helps your business grow without compromise. Because "good for the business" should also mean "good for the costumer".</p>
             <a class="btn p-2 color-white bg-orange" href="#">GetHubspotFree</a>
-            <p class=" F-2 p-3">Get started with FREE tools, and upgrades as you grow.</p>
+            <p class=" f-2 p-3">Get started with FREE tools, and upgrades as you grow.</p>
           </div>
         </div>
       </section>
@@ -57,11 +57,11 @@
 
     </header>
     <main>
-      <section class="introduction">
+      <section class="introduction bg-intro">
         <div class="container">
           <img class="cube m-0" src="./Assets/img/cube.webp" alt="Cubo colorato smontato">
-          <h2 class="">Powerful Alone. Better Together</h2>
-          <p class="">HubSpot offers a full stack of software for marketing, sales, and customer service, with a completely free CRM at its core. They're powerful alone - but even better when used together.</p>
+          <h2 class="center pb-1">Powerful Alone. Better Together</h2>
+          <p class="par-1 center lh-1">HubSpot offers a full stack of software for marketing, sales, and customer service, with a completely free CRM at its core. They're powerful alone - but even better when used together.</p>
           <div class="row bg-white card">
             <div class="col-30">
               <img class="book m-0" src="./Assets/img/book.svg" alt="Libro Aperto">
@@ -69,9 +69,9 @@
                 <a class="btn p-2 color-white bg-orange" href="#">Learn More</a>
               </div>
             </div>
-            <div class="col-70">
-              <h3>Free HubSpot CRM</h3>
-              <p>Everything you need to organize, track, and build better relationship with leads and customers. Yes, it's 100% free. Forever.</p>
+            <div class="col-70 pr-3">
+              <h3 class="pb-2 pt-4">Free HubSpot CRM</h3>
+              <p class="lh-1">Everything you need to organize, track, and build better relationship with leads and customers. Yes, it's 100% free. Forever.</p>
               <h4 class="d-inline-block v-middle pr-2">popolar feature</h4>
               <hr class="d-inline-block v-middle w-65">
               <ul class="list-horizontal">
@@ -86,8 +86,8 @@
             <div class="card-box">
               <div class="col-30 bg-white card">
                 <img class="pt-1 w-30 m-0" src="./Assets/img/buble.svg" alt="">
-                <h3>Marketing Hub</h3>
-                <p>Marketing software to help you grow traffic, convert more visitors, and run complete inbound marketing campaigns at scale.</p>
+                <h3 class="pb-2 pt-4">Marketing Hub</h3>
+                <p class="lh-1">Marketing software to help you grow traffic, convert more visitors, and run complete inbound marketing campaigns at scale.</p>
                 <hr class="w-80 m-0 brt-1">
                 <h4>popolar feature</h4>
                 <ul class="list-vertical">
@@ -101,8 +101,8 @@
             <div class="card-box">
               <div class="col-30 bg-white card ml-1">
                 <img class="pt-1 w-37 m-0" src="./Assets/img/office.svg" alt="">
-                <h3>Sales Hub</h3>
-                <p>Time-saving sales software that helps you get deeper insights into prospects, automate the tasks you hate, and close more deals faster.</p>
+                <h3 class="pb-2 pt-4">Sales Hub</h3>
+                <p class="lh-1">Time-saving sales software that helps you get deeper insights into prospects, automate the tasks you hate, and close more deals faster.</p>
                 <hr class="w-80 m-0 brt-1">
                 <h4>popolar feature</h4>
                 <ul class="list-vertical">
@@ -116,8 +116,8 @@
             <div class="card-box">
               <div class="col-30 bg-white card ml-1">
                 <img class="pt-1 w-27 m-0" src="./Assets/img/table.svg" alt="">
-                <h3>Service Hub</h3>
-                <p>Customer service software to help you connect with customers, exceed expectations, and turn them into promoters that grow your business.</p>
+                <h3 class="pb-2 pt-4">Service Hub</h3>
+                <p class="lh-1">Customer service software to help you connect with customers, exceed expectations, and turn them into promoters that grow your business.</p>
                 <hr class="w-80 m-0 brt-1">
                 <h4>popolar feature</h4>
                 <ul class="list-vertical">
@@ -132,12 +132,100 @@
           </div>
         </div>
       </section>
-      <section class="Support">
+      <section class="support bg-support">
+        <div class="container">
+          <h2 class="pt-2 center color-white">Learn and Grow with award-winning support and thriving community behind you.</h2>
+          <p class="center color-white lh-1 pt-1 pb-1">You don't have to go it alone. Master inbound methodology and get the most out of your tools with HubSpot's legendary customer support team and a community of thousand of marketing and sales pros just like you.</p>
+          <div class="row center">
+            <div class="col-25 brb-1 pb-2">
+              <img src="./Assets/img/hand.svg" alt="hand">
+              <h2 class="plus">150</h2>
+              <p>HubSpot user groups</p>
+            </div>
+            <div class="col-25 brb-1 pb-2">
+              <img src="./Assets/img/blogs.svg" alt="HubSpot blog">
+              <h2 class="plus">4.5M</h2>
+              <p>monthly visits</p>
+            </div>
+            <div class="col-25 brb-1 pb-2">
+              <img src="./Assets/img/academy.svg" alt="HubSpot Academy">
+              <h2 class="plus">155K</h2>
+              <p>certified professionals</p>
+            </div>
+            <div class="col-25 brb-1 pb-2">
+              <img src="./Assets/img/inbound.svg" alt="Inbound">
+              <h2 class="plus">21K</h2>
+              <p>registered attendees</p>
+            </div>
+          </div>
+              <div class="row center">
+                <div class="col-25 br-2 pb-3">
+                  <img src="./Assets/img/connect.svg" alt="HubSpot Connect">
+                  <h2 class="plus">200</h2>
+                  <p>integrations</p>
+                </div>
+                <div class="col-25 br-2 pb-3">
+                  <img src="./Assets/img/globe.svg" alt="globe">
+                  <h2 class="plus">6</h2>
+                  <p>languages</p>
+                </div>
+                <div class="col-25 br-2 pb-3">
+                  <img src="./Assets/img/chat.svg" alt="chat">
+                  <h2 class="plus">2.6M</h2>
+                  <p>social followers</p>
+                </div>
+                <div class="col-25 br-2 pb-3">
+                  <img src="./Assets/img/growth.svg" alt="growth">
+                  <h2 class="plus">5K</h2>
+                  <p>profiles and counting</p>
+                </div>
+              </div>
 
+        </div>
       </section>
-      <section class="Sponsor">
+      <section class="sponsor">
+        <div class="container">
+          <div class="row">
+            <div class="col-25 pl-2">
+              <h2 class="pt-2 pb-1">64,500</h2>
+              <p class="lh-1">customers in over <b>100</b> countries growing their businesses with HubSpot</p>
+            </div>
 
+            <div class="col-70">
+              <div class="img-box">
+                <div class="img-top pt-3">
+                  <img src="./Assets/img/atlasian.webp" alt="">
+                  <img src="./Assets/img/doordash.webp" alt="">
+                  <img src="./Assets/img/g2c.webp" alt="">
+                  <img src="./Assets/img/purple.webp" alt="">
+                </div>
+                <div class="img-bottom pt-1">
+                  <img src="./Assets/img/subaru.webp" alt="">
+                  <img src="./Assets/img/wistia.webp" alt="">
+                  <img src="./Assets/img/classpass.webp" alt="">
+                  <img src="./Assets/img/wm.webp" alt="">
+                </div>
+              </div>
+
+            </div>
+          </div>
+          <div class="row">
+            <div class="col-40">
+              <h3 class="pt-3 pr-2 pb-1">Start Growing With HubSpot Today</h3>
+              <p class="lh-1 pb-1">With tools to make every part of your process more human and a support team excited to help you, getting started with inbound has never been easier.</p>
+              <a class="btn p-2 color-white bg-orange" href="#">GetHubspotFree</a>
+              <p class="f-3 pt-4 pb-1">Get started with FREE tools, or get more with our premium software.</p>
+            </div>
+            <div class="col-60">
+              <img class="profile-image" src="./Assets/img/woman.webp" alt="woman image">
+            </div>
+          </div>
+        </div>
       </section>
+
     </main>
+    <footer>
+
+    </footer>
   </body>
 </html>
