Footer Quasi Completo

--- a/index.html
+++ b/index.html
@@ -225,7 +225,60 @@
 
     </main>
     <footer>
+      <div class="container">
+        <div class="row">
+          <div class="col-25">
+            <h5 class="color-white">Increase Your Traffic</h5>
+            <ul class="">
+              <li class="color-white">Ad Software</li>
+              <li class="color-white">Blog Software</li>
+              <li class="color-white">Seo Software</li>
+              <li class="color-white">Social Media Software</li>
+              <li class="color-white">Content Management System</li>
+            </ul>
+          </div>
+          <div class="col-25">
+            <h5 class="color-white">Connect With Leads</h5>
+            <ul class="">
+              <li class="color-white">Find New Prospects</li>
+              <li class="color-white">Email Tracking</li>
+              <li class="color-white">Sales Email Templates</li>
+              <li class="color-white">Click to Call Ypur Leads</li>
+              <li class="color-white">Email Marketing</li>
+            </ul>
+          </div>
+          <div class="col-25">
+            <h5 class="color-white">Close and Mange Leads</h5>
+            <ul>
+              <li class="color-white">Document Tracking Tool</li>
+              <li class="color-white">Meeting Schedule Tool</li>
+              <li class="color-white">Sales Automation Tool</li>
+              <li class="color-white">Lead Management Tool</li>
+              <li class="color-white">Pipeline Management Tool</li>
+            </ul>
+          </div>
+          <div class="col-25">
+            <h5 class="color-white">Support and Tools</h5>
+            <ul>
+              <li class="color-white">HubSpot Partners</li>
+              <li class="color-white">Join a Local User Group</li>
+              <li class="color-white">Get a Free Website Report</li>
+              <li class="color-white">HubSpot Templates</li>
+              <li class="color-white">Free Tools & Generators</li>
+              <li class="pt-2"><a class="btn-support" href="#">Contact HubSpot Support</a></li>
+            </ul>
+            <ul class="social-link">
+              <li class="d-inline-block"><a href="#"><i class="fab fa-facebook-f"></i></a></li>
+              <li class="d-inline-block"><a href="#"><i class="fab fa-instagram"></i></a></li>
+              <li class="d-inline-block"><a href="#"><i class="fab fa-youtube"></i></a></li>
+              <li class="d-inline-block"><a href="#"><i class="fab fa-twitter"></i></a></li>
+              <li class="d-inline-block"><a href="#"><i class="fab fa-linkedin-in"></i></a></li>
+            </ul>
+          </div>
 
+        </div>
+
+      </div>
     </footer>
   </body>
 </html>
