--- a/index.html
+++ b/index.html
@@ -4,12 +4,15 @@
     <meta charset="utf-8">
     <title>Hubspot</title>
     <link rel="stylesheet" href="./Assets/css/master.css">
+<!-- FONT FAMILY -->
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@100;400&display=swap" rel="stylesheet">
+<!-- FONT ICONS -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.2/css/all.min.css" integrity="sha512-HK5fgLBL+xu6dm/Ii3z4xhlSUyZgTT9tuc/hSrtw6uzJOvgRr2a9jyxxT1ely+B+xFAmJKVSTbpM/CuL7qxO8w==" crossorigin="anonymous" />
   </head>
   <body>
     <header>
+<!-- NAV FIXED -->
       <nav class="fixed">
         <div class="bg-grey">
           <div class="container">
@@ -25,7 +28,7 @@
             </ul>
           </div>
         </div>
-
+<!-- 2ND NAV NOT FIXED -->
       </nav>
       <nav class="not-fixed">
         <div class="container">
@@ -39,6 +42,7 @@
           </ul>
         </div>
       </nav>
+<!-- JUMBOTRON -->
       <section class="bg-jumbo">
         <div class="container">
           <div class="jumbo-text">
@@ -49,6 +53,7 @@
           </div>
         </div>
       </section>
+<!-- LINE THROUGH JUMBO -->
       <section>
         <div class="line">
 
@@ -57,6 +62,7 @@
 
     </header>
     <main>
+<!-- INTRODUCTION -->
       <section class="introduction bg-intro">
         <div class="container">
           <img class="cube m-0" src="./Assets/img/cube.webp" alt="Cubo colorato smontato">
@@ -81,7 +87,7 @@
               </ul>
             </div>
           </div>
-
+<!-- THREE HUB -->
           <div class="row">
             <div class="card-box">
               <div class="col-30 bg-white card">
@@ -132,6 +138,7 @@
           </div>
         </div>
       </section>
+<!-- HUBSPOT COMMUNITY AND NUMBERS -->
       <section class="support bg-support">
         <div class="container">
           <h2 class="pt-2 center color-white">Learn and Grow with award-winning support and thriving community behind you.</h2>
@@ -158,23 +165,23 @@
               <p>registered attendees</p>
             </div>
           </div>
-              <div class="row center">
-                <div class="col-25 br-2 pb-3">
+              <div class="row center pb-3">
+                <div class="col-25 br-2 pb-2">
                   <img src="./Assets/img/connect.svg" alt="HubSpot Connect">
                   <h2 class="plus">200</h2>
                   <p>integrations</p>
                 </div>
-                <div class="col-25 br-2 pb-3">
+                <div class="col-25 br-2 pb-2">
                   <img src="./Assets/img/globe.svg" alt="globe">
                   <h2 class="plus">6</h2>
                   <p>languages</p>
                 </div>
-                <div class="col-25 br-2 pb-3">
+                <div class="col-25 br-2 pb-2">
                   <img src="./Assets/img/chat.svg" alt="chat">
                   <h2 class="plus">2.6M</h2>
                   <p>social followers</p>
                 </div>
-                <div class="col-25 br-2 pb-3">
+                <div class="col-25 br-2 pb-2">
                   <img src="./Assets/img/growth.svg" alt="growth">
                   <h2 class="plus">5K</h2>
                   <p>profiles and counting</p>
@@ -183,6 +190,7 @@
 
         </div>
       </section>
+<!-- SPONSOR PART -->
       <section class="sponsor">
         <div class="container">
           <div class="row">
@@ -225,6 +233,7 @@
 
     </main>
     <footer>
+<!-- FOOTER NAVBAR WITH LINKS -->
       <div class="container">
         <div class="row">
           <div class="col-25">
@@ -277,7 +286,27 @@
           </div>
 
         </div>
-
+        <div>
+          <ul class="languages center pt-3 pb-2">
+            <li class="d-inline-block pr-1"><a class="color-white" href="#">English</a></li>
+            <li class="d-inline-block pr-1"><a class="color-white" href="#">Deutsch</a></li>
+            <li class="d-inline-block pr-1"><a class="color-white" href="#">日本語</a></li>
+            <li class="d-inline-block pr-1"><a class="color-white" href="#">Español</a></li>
+            <li class="d-inline-block pr-1"><a class="color-white" href="#">Português</a></li>
+            <li class="d-inline-block pr-1"><a class="color-white" href="#">Français</a></li>
+          </ul>
+        </div>
+        <hr>
+        <div class="row pt-4 pb-1">
+          <div class="col-30">
+            <img class="color-white" src="https://www.hubspot.com/hubfs/WBZ-1165%20Global%20Nav%20Redesign/Wordmark-White.svg" alt="Logo HubSpot Bianco">
+            <p class="color-white">Copyright © 2019 HubSpot, Inc.</p>
+          </div>
+          <div class="col-70 privacy">
+            <a class="color-white pr-1" href="#">Legal Stuff</a>
+            <a class="color-white" href="#">Privacy Policy</a>
+          </div>
+        </div>
       </div>
     </footer>
   </body>
